--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+
+@import 'dashboard';
+@import 'sidebar';
+
+
 html, body, #app {
     height:100%;
 }
